# projet-evalu-code-cacahuetes

./: CMakeLists.txt  README.md  ane.c  ane.h  children.c  children.h  collision.c  collision.h  defeat.txt  emptyMap.c  emptyMap.h  flag.h  gingy.c  gingy.h  main.c  map.c  map.h  map1.txt  map2.txt  map3.txt  menu.c  menu.h  menu.txt  move.c  move.h  music.c  music.h  shrek.c  shrek.h  sprite.h  sprites-of-all-caracters.tkt  sprites.h  victory.txt
characters/: sprite.h
characters/children/: children.c  children.h
characters/donkey/: donkey.c  donkey.h
characters/gingy/: gingy.h
characters/shrek/: shrek.c  shrek.h
collisions/: collisions.c  collisions.h
flag/: flag.c
map/: map.c  map.h
menu/: menu.c  menu.h
move/: move.c  move.h
