cmake_minimum_required(VERSION 3.26)
project(Code-Cacahuetes)

set(CMAKE_C_STANDARD 11)

add_executable(Code-Cacahuetes main.c
        shrek.c
        move.h
        move.c
        map.h
        map.c
        menu.c
        menu.h
        children.c
        children.h
        ane.c
        gingy.c
)
