cmake_minimum_required(VERSION 3.26)
project(Code-Cacahuetes)

set(CMAKE_C_STANDARD 11)

add_executable(Code-Cacahuetes main.c
        shrek.c
        move.h
        move.c
        map.h
        map.c
        menu.c
        menu.h
        ane.c
        ane.h
        gingy.c
        gingy.h
        children.c
        children.h
        collision.c
        collision.h
        flag.c
        flag.h
)
